--- a/NetRunner_android/app/src/main/res/layout/menu_item_spinner.xml
+++ b/NetRunner_android/app/src/main/res/layout/menu_item_spinner.xml
@@ -1,5 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Spinner xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"></Spinner>
+    android:layout_height="wrap_content"
+    android:dropDownWidth="wrap_content"
+
+    android:orientation="horizontal">
+
+    <TextView
+        android:id="@+id/menu_title"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="2" />
+</LinearLayout>
+
