--- a/NetRunner_android/app/src/main/res/layout/activity_tiotest.xml
+++ b/NetRunner_android/app/src/main/res/layout/activity_tiotest.xml
@@ -4,5 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TIOTestActivity">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" android:id="@+id/imageView"/>
 
 </android.support.constraint.ConstraintLayout>
