--- a/NetRunner_android/app/src/main/res/menu/drawer_view.xml
+++ b/NetRunner_android/app/src/main/res/menu/drawer_view.xml
@@ -4,15 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <group
-        android:checkableBehavior="single"
-        android:id="@+id/selectFragments">
+        android:checkableBehavior="single">
         <item
             android:id="@+id/live_camera_fragment_menu_item"
             android:checked="true"
             android:title="@string/live_camera_menu_item_title" />
         <item
             android:id="@+id/bulk_inference_fragment_menu_item"
-            android:title="@string/bulk_classification_menu_item_title" />
+            android:title="@string/single_image_menu_item_title" />
         <item
             android:id="@+id/benchmark_fragment_menu_item"
             android:title="@string/benchmark_menu_item_title" />
