rename app and package

--- a/NetRunner_android/app/src/main/res/layout/fragment_live_camera_classification.xml
+++ b/NetRunner_android/app/src/main/res/layout/fragment_live_camera_classification.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="fragment"
-            type="ai.doc.netrunner_android.view.LiveCameraClassificationFragment" />
+            type="ai.doc.netrunner.view.LiveCameraClassificationFragment" />
     </data>
 
 
