--- a/NetRunner_android/app/src/main/res/layout/fragment_single_image.xml
+++ b/NetRunner_android/app/src/main/res/layout/fragment_single_image.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="fragment"
-            type="ai.doc.netrunner_android.view.SingleImageClassificationFragment"/>
+            type="ai.doc.netrunner.view.SingleImageClassificationFragment"/>
     </data>
 
     <LinearLayout
