--- a/app/src/main/res/layout/menu_item_switch.xml
+++ b/app/src/main/res/layout/menu_item_switch.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.SwitchCompat android:layout_width="fill_parent"
+<androidx.appcompat.widget.SwitchCompat android:layout_width="fill_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android" />
