--- a/app/src/main/res/layout/fragment_single_image.xml
+++ b/app/src/main/res/layout/fragment_single_image.xml
@@ -11,65 +11,67 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/black"
         android:orientation="vertical"
-        android:layout_margin="25dp"
         tools:context=".view.SingleImageClassificationFragment">
 
         <ImageView
+            android:id="@+id/imageview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="4"
-
-            android:id="@+id/imageview"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <Button
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="Select picture"
-                android:onClick="@{(e) -> fragment.pickImage()}" />
-            <Button
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:enabled="false"
-                android:id="@+id/btn_classify"
-                android:layout_height="wrap_content"
-                android:text="Classify !"
-                android:onClick="@{(e) -> fragment.classify()}" />
-        </LinearLayout>
-
+            android:layout_weight="4" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="@drawable/rounded_rectangle"
-            android:orientation="horizontal"
-            android:layout_alignParentBottom="true">
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:background="@color/white"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/predictions"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:textColor="@color/black"
+                android:layout_weight="1"
                 android:bufferType="spannable"
-                android:textSize="18sp"
-                android:text="@{fragment.predictions}"/>
+                android:padding="12dp"
+                android:text="@{fragment.predictions}"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/latency"
-                android:layout_marginRight="2dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="2dp"
+                android:padding="12dp"
+                android:text="@{fragment.latency}"
                 android:textColor="@color/black"
-                android:textSize="14sp"
-                android:text="@{fragment.latency}"/>
+                android:textSize="14sp" />
 
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            >
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="@{(e) -> fragment.pickImage()}"
+                android:text="@string/select_picture" />
+        </LinearLayout>
+
     </LinearLayout>
 </layout>
