--- a/app/src/main/res/layout/fragment_live_camera_classification.xml
+++ b/app/src/main/res/layout/fragment_live_camera_classification.xml
@@ -7,7 +7,6 @@
             type="ai.doc.netrunner.view.LiveCameraClassificationFragment" />
     </data>
 
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,10 +22,10 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:layout_marginBottom="25dp"
-            android:padding="15dp"
+            android:layout_marginLeft="@dimen/margin_predictions_layout"
+            android:layout_marginRight="@dimen/margin_predictions_layout"
+            android:layout_marginBottom="@dimen/margin_predictions_layout"
+            android:padding="@dimen/padding_predictions_layout"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_rectangle"
             android:orientation="horizontal"
@@ -37,23 +36,20 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:layout_margin="2dp"
+                android:layout_margin="@dimen/margin_tiny"
                 android:textColor="@color/black"
                 android:bufferType="spannable"
-                android:textSize="16sp"
+                android:textSize="@dimen/font_size_l"
                 android:text="@{fragment.predictions}" />
 
             <TextView
                 android:id="@+id/latency"
-                android:layout_marginRight="2dp"
+                android:layout_marginRight="@dimen/margin_tiny"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:textSize="14sp"
+                android:textSize="@dimen/font_size_default"
                 android:text="@{fragment.latency}" />
-
         </LinearLayout>
-
-
     </RelativeLayout>
 </layout>
