--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,19 @@
             android:fitsSystemWindows="true"
             android:minHeight="?attr/actionBarSize"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            android:background="?attr/colorPrimaryDark" />
+            android:background="?attr/colorPrimaryDark" >
+
+            <ImageButton
+                android:id="@+id/actionbar_camera_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_menu_camera"
+                android:background="?android:selectableItemBackgroundBorderless"
+                android:layout_gravity="end"
+                android:layout_marginEnd="@dimen/actionbar_camera_margin_right"
+                />
+
+        </androidx.appcompat.widget.Toolbar>
 
         <FrameLayout
             android:layout_width="match_parent"
