--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,8 +2,8 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/height_nav_header"
-    android:background="@color/white"
+    android:layout_height="@dimen/nav_header_height"
+    android:background="@android:color/transparent"
     android:paddingTop="@dimen/padding_nav_header"
     android:orientation="horizontal"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
@@ -11,10 +11,12 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_l"
+        android:layout_marginTop="@dimen/nav_header_margin"
+        android:layout_marginBottom="@dimen/nav_header_margin"
+        android:layout_marginStart="@dimen/nav_header_margin_small"
+        android:layout_marginEnd="@dimen/nav_header_margin"
         android:adjustViewBounds="true"
         android:contentDescription="@string/doc_ai_logo"
         android:src="@drawable/logo" />
-
 
 </LinearLayout>
