--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,7 +5,6 @@
     <dimen name="margin_tiny">2dp</dimen>
     <dimen name="margin_minimum">4dp</dimen>
     <dimen name="margin_default">8dp</dimen>
-    <dimen name="margin_l">10dp</dimen>
     <dimen name="margin_maximum">16dp</dimen>
     <dimen name="margin_big">20dp</dimen>
     <dimen name="margin_extra">24dp</dimen>
@@ -32,5 +31,7 @@
     <dimen name="padding_nav_header">25dp</dimen>
 
     <!-- NetRunner Specific Heights -->
-    <dimen name="height_nav_header">90dp</dimen>
+    <dimen name="nav_header_height">120dp</dimen>
+    <dimen name="nav_header_margin">24dp</dimen>
+    <dimen name="nav_header_margin_small">12dp</dimen>
 </resources>
