--- a/app/src/main/res/layout/fragment_single_image_tab.xml
+++ b/app/src/main/res/layout/fragment_single_image_tab.xml
@@ -30,26 +30,22 @@
         android:layout_marginRight="@dimen/margin_predictions_layout"
         android:layout_marginTop="@dimen/margin_predictions_layout"
         android:layout_marginBottom="@dimen/margin_predictions_layout"
+        android:padding="@dimen/padding_predictions_layout"
         android:background="@drawable/rounded_rectangle"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/predictions"
-            android:layout_width="0dp"
+        <FrameLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_tiny"
             android:layout_weight="1"
-            android:bufferType="spannable"
-            android:padding="@dimen/padding_extra"
-            android:textColor="@color/black"
-            android:textSize="@dimen/font_size_l" />
+            android:layout_margin="@dimen/margin_tiny"
+            android:id="@+id/outputContainer" />
 
         <TextView
             android:id="@+id/latency"
+            android:layout_marginRight="@dimen/margin_tiny"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/margin_tiny"
-            android:padding="@dimen/padding_extra"
             android:textColor="@color/black"
             android:textSize="@dimen/font_size_default" />
 
