--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,7 @@
             android:layout_width="match_parent"
             android:fitsSystemWindows="true"
             android:minHeight="?attr/actionBarSize"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            android:background="?attr/colorPrimaryDark" >
+            android:background="?attr/colorPrimary" >
 
             <ImageButton
                 android:id="@+id/actionbar_camera_button"
