--- a/app/src/main/res/layout/fragment_live_camera_tab.xml
+++ b/app/src/main/res/layout/fragment_live_camera_tab.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -15,9 +17,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_marginLeft="@dimen/margin_predictions_layout"
-        android:layout_marginRight="@dimen/margin_predictions_layout"
-        android:layout_marginBottom="@dimen/margin_predictions_layout"
+        android:layout_margin="@dimen/margin_predictions_layout"
         android:padding="@dimen/padding_predictions_layout"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_rectangle"
@@ -39,4 +39,28 @@
             android:textColor="@color/black"
             android:textSize="@dimen/font_size_default" />
     </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/toggle_facing_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="top|end"
+        android:src="@android:drawable/ic_popup_sync"
+        android:clickable="true" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/toggle_pause_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="80dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="top|end"
+
+        android:src="@android:drawable/ic_media_pause"
+        android:clickable="true" />
 </RelativeLayout>
