--- a/app/src/main/res/layout/fragment_single_image_tab.xml
+++ b/app/src/main/res/layout/fragment_single_image_tab.xml
@@ -26,10 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_marginLeft="@dimen/margin_predictions_layout"
-        android:layout_marginRight="@dimen/margin_predictions_layout"
-        android:layout_marginTop="@dimen/margin_predictions_layout"
-        android:layout_marginBottom="@dimen/margin_predictions_layout"
+        android:layout_margin="@dimen/margin_predictions_layout"
         android:padding="@dimen/padding_predictions_layout"
         android:background="@drawable/rounded_rectangle"
         android:orientation="horizontal">
