--- a/app/src/main/res/layout/fragment_live_camera_tab.xml
+++ b/app/src/main/res/layout/fragment_live_camera_tab.xml
@@ -2,7 +2,6 @@
 
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -49,7 +48,8 @@
         android:layout_alignParentEnd="true"
         android:layout_gravity="top|end"
         android:src="@android:drawable/ic_popup_sync"
-        android:clickable="true" />
+        android:clickable="true"
+        android:focusable="true" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/toggle_pause_button"
@@ -60,7 +60,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_gravity="top|end"
-
         android:src="@android:drawable/ic_media_pause"
-        android:clickable="true" />
+        android:clickable="true"
+        android:focusable="true" />
 </RelativeLayout>
