initial model details and json

--- a/app/src/main/res/layout/activity_model_manager.xml
+++ b/app/src/main/res/layout/activity_model_manager.xml
@@ -16,9 +16,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="Net Runner Models">
+        app:title="Manage Models">
 
         <Button
+            android:id="@+id/import_model"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
