--- a/app/src/main/res/layout/activity_model_manager.xml
+++ b/app/src/main/res/layout/activity_model_manager.xml
@@ -16,15 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="Manage Models">
-
-<!--        <Button-->
-<!--            android:id="@+id/import_model"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_gravity="end"-->
-<!--            android:layout_marginEnd="12dp"-->
-<!--            android:text="Import" />-->
+        app:title="@string/manage_models_activity_title">
 
         <ImageButton
             android:id="@+id/import_model"
