--- a/app/src/main/res/layout/fragment_model_bundle_json.xml
+++ b/app/src/main/res/layout/fragment_model_bundle_json.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="JSON"
+            android:textColor="@color/black"
             android:textSize="16sp" />
 
     </LinearLayout>
