--- a/app/src/main/res/layout/fragment_import_model_bundle.xml
+++ b/app/src/main/res/layout/fragment_import_model_bundle.xml
@@ -21,10 +21,12 @@
 
     <ProgressBar
         android:id="@+id/progress_bar"
-        style="?android:attr/progressBarStyle"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone" />
+        android:max="100"
+        android:progressTint="@color/colorAccent"
+        android:visibility="invisible" />
 
 
 </LinearLayout>
