--- a/app/src/main/res/layout/fragment_import_model_bundle.xml
+++ b/app/src/main/res/layout/fragment_import_model_bundle.xml
@@ -7,9 +7,19 @@
     android:padding="24dp" >
 
     <TextView
+        android:id="@+id/tensorio_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enter Model Bundle URL:" />
+        android:text="Models must be packaged for Tensor/IO. Learn more at https://github.com/doc-ai/tensorio"
+        android:textSize="14sp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Enter Model Bundle URL:"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:layout_marginTop="12dp"/>
 
     <EditText
         android:id="@+id/url_text"
@@ -17,7 +27,11 @@
         android:layout_height="wrap_content"
         android:inputType="textUri"
         android:imeOptions="actionDone"
+        android:layout_marginStart="-3dp"
+        android:layout_marginEnd="-3dp"
         />
+
+
 
     <ProgressBar
         android:id="@+id/progress_bar"
