--- a/app/src/main/res/layout/activity_model_manager.xml
+++ b/app/src/main/res/layout/activity_model_manager.xml
@@ -28,6 +28,16 @@
             android:tint="@color/black"
             android:layout_marginEnd="20dp"/>
 
+        <ImageButton
+            android:id="@+id/delete_model"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:background="?android:selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_menu_trash"
+            android:tint="@color/black"
+            android:layout_marginEnd="20dp"/>
+
     </androidx.appcompat.widget.Toolbar>
 
     <FrameLayout
