extract strings from src and fragments

--- a/app/src/main/res/layout/fragment_model_bundle_json.xml
+++ b/app/src/main/res/layout/fragment_model_bundle_json.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -16,7 +17,7 @@
             android:id="@+id/json_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="JSON"
+            tools:text="Model JSON"
             android:textColor="@color/black"
             android:textSize="16sp" />
 
