--- a/app/src/main/res/layout/list_item_model_bundle.xml
+++ b/app/src/main/res/layout/list_item_model_bundle.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,7 +13,7 @@
         android:id="@+id/model_bundle_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Model Bundle Title"
+        tools:text="Model Bundle Title"
         android:textColor="@color/black"
         android:textSize="18sp" />
 
@@ -21,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Model Bundle Description"
+        tools:text="Model Bundle Description"
         android:textSize="14sp"
         android:minLines="2"
         android:maxLines="2" />
