--- a/app/src/main/res/layout/fragment_live_camera_tab.xml
+++ b/app/src/main/res/layout/fragment_live_camera_tab.xml
@@ -7,6 +7,8 @@
     android:orientation="vertical"
     android:background="@android:color/black">
 
+    <!-- Camera View -->
+
     <TextureView
         android:id="@+id/texture"
         android:layout_width="match_parent"
@@ -14,7 +16,10 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
+    <!-- Output -->
+
     <LinearLayout
+        android:id="@+id/output_view"
         android:layout_width="match_parent"
         android:layout_margin="@dimen/margin_predictions_layout"
         android:padding="@dimen/padding_predictions_layout"
@@ -38,6 +43,8 @@
             android:textColor="@color/black"
             android:textSize="@dimen/font_size_default" />
     </LinearLayout>
+
+    <!-- Floating Action Buttons -->
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/toggle_facing_button"
