--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:text="Net Runner"
+            android:text="@string/net_runner"
             android:textAlignment="center"
             android:textColor="@android:color/holo_orange_dark"
             android:textSize="30sp"
@@ -40,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:text="By"
+            android:text="@string/by"
             android:textAlignment="center"
             android:textAllCaps="true"
             android:textColor="@color/colorPrimary"
@@ -61,7 +61,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
             android:lineSpacingExtra="1sp"
-            android:text="The on device environment for running and evaluating computer vision machine learning models. Net Runner requires access to your camera for real-time inference. "
+            android:text="@string/about_net_runner"
             android:textAlignment="center"
             android:textColor="#BBBBBB"
             android:textSize="12sp" />
@@ -69,14 +69,14 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/start_camera_button"
+        android:id="@+id/get_started_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="16dp"
         android:backgroundTint="@color/colorAccent"
-        android:text="Get Started"
+        android:text="@string/get_started_button"
         android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
